# nkCryptoTool-rust

./: .gitignore  CHANGELOG.md  CURRENT_ISSUES_SUMMARY.md  CURRENT_ISSUES_SUMMARY_v56.md  Cargo.toml  FINAL_COMPLETION_REPORT.md  FINAL_REMEDIAL_REPORT_v56.md  KNOWN_ISSUES.md  LICENSE.txt  PENDING_ROADMAP_v56.md  README.md  SECURITY.md  SECURITY_PROFILE.md  SECURITY_PROFILE_GUI.md  SPEC.md  THREAT_REMEDIAL_REPORT_40.md  THREAT_REMEDIAL_REPORT_41.md  THREAT_REMEDIAL_REPORT_42.md  THREAT_REMEDIAL_REPORT_43.md  THREAT_REMEDIAL_REPORT_44.md  THREAT_REMEDIAL_REPORT_45.md  THREAT_REMEDIAL_REPORT_46.md  THREAT_REMEDIAL_REPORT_47.md  THREAT_REMEDIAL_REPORT_48.md  THREAT_REMEDIAL_REPORT_49.md  THREAT_REMEDIAL_REPORT_50.md  THREAT_REMEDIAL_REPORT_51.md  THREAT_REMEDIAL_REPORT_52.md  THREAT_REMEDIAL_REPORT_53.md  THREAT_REMEDIAL_REPORT_54.md  THREAT_REMEDIAL_REPORT_55.md  THREAT_REMEDIAL_REPORT_56.md  build.rs  hybrid_input.txt  large_ecc.sig  message_cpp.sig  test.dec  test_basic.sh  test_file.txt  test_hybrid.sh  (+1 more)
.cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
bench_keys/: private_enc_pqc.key  public_enc_pqc.key
client_keys/: private_sign_pqc.key
client_keys_final/: private_sign_pqc.key  public_sign_pqc.key
client_keys_v2/: private_sign_pqc.key  server_pub.key
examples/: manual_pqc_test.rs
interop_keys/: private_enc_pqc.key  public_enc_pqc.key
issue/: CHAT_USAGE_GUIDE.md  F-CLI-FORCE_FIX_REPORT.md  F-IROH-39_DIAGNOSIS.md  F-IROH-39_FIX_REPORT.md  F-IROH-39_FIX_VERIFICATION.md  F-IROH-39_FIX_VERIFICATION_v2.md  F-IROH-40_FIX_HINTS.md  F-IROH-40_RUSTCRYPTO_BUILD_BROKEN.md  F-IROH-40_VENDORED_IMPLEMENTATION_REPORT.md  INTEROP_VERIFICATION_2026-05-07.md  IROH_MIGRATION_COMPLETION_REPORT.md  IROH_MIGRATION_PLAN.md  IROH_MIGRATION_VERIFICATION_REPORT.md  PHASE1_COMPLETION_REPORT.md  PHASE1_REMEDIATION_REPORT.md  PHASE1_REMEDIATION_REPORT_v2.md  PHASE1_REMEDIATION_REPORT_v3_COMPLETE.md  PHASE1_VERIFICATION_REPORT.md  PHASE1_VERIFICATION_REPORT_v2.md  PHASE1_VERIFICATION_REPORT_v3.md  PHASE2_COMPLETION_REPORT.md  PHASE2_REMEDIATION_REPORT_FINAL.md  PHASE2_REMEDIATION_REPORT_v3_FINAL.md  PHASE2_VERIFICATION_REPORT.md  PHASE2_VERIFICATION_REPORT_v2.md  PHASE2_VERIFICATION_REPORT_v3_FINAL.md  PHASE3_COMPLETION_REPORT.md  PHASE3_REMEDIATION_REPORT_FINAL.md  PHASE3_VERIFICATION_REPORT.md
keys_chat/: private_sign_pqc.key  public_sign_pqc.key
large_sig_keys/: private_sign_ecc.key  public_sign_ecc.key
scripts/: mandate_check.sh
server_keys/: private_sign_pqc.key  public_sign_pqc.key
server_keys_final/: private_sign_pqc.key
server_keys_v2/: client_pub.key  private_sign_pqc.key
src/: config.rs  error.rs  lib.rs  main.rs  network.rs  pipeline.rs  processor.rs  ticket.rs  utils.rs
src/backend/: mod.rs  openssl_impl.rs  rustcrypto_impl.rs
src/gui/: camera.rs  chat.slint  file_picker.rs  mod.rs  notifications.rs  screen_protection.rs
src/key/: mod.rs  tpm.rs
src/network/: iroh.rs  mod.rs  tcp.rs
src/strategy/: ecc.rs  hybrid.rs  mod.rs  pqc.rs
target_rustcrypto/: .rustc_info.json
target_rustcrypto/release/: libnk_crypto_tool.d  nk-crypto-tool.d
target_rustcrypto/release/.fingerprint/aead-2b68e0588fb2b966/: lib-aead  lib-aead.json
target_rustcrypto/release/.fingerprint/aead-e127f7d6d4f3e7d2/: lib-aead  lib-aead.json
target_rustcrypto/release/.fingerprint/aes-275792c6c11e0aae/: lib-aes  lib-aes.json
target_rustcrypto/release/.fingerprint/aes-350dcfb7e41f47c8/: lib-aes  lib-aes.json
target_rustcrypto/release/.fingerprint/aes-gcm-4dfa76cf04536dce/: lib-aes_gcm  lib-aes_gcm.json
target_rustcrypto/release/.fingerprint/aes-gcm-e606051c265480d4/: lib-aes_gcm  lib-aes_gcm.json
target_rustcrypto/release/.fingerprint/anstream-634dccd2cba28724/: lib-anstream  lib-anstream.json
target_rustcrypto/release/.fingerprint/anstream-6c48c9cf8039b8e9/: lib-anstream  lib-anstream.json
target_rustcrypto/release/.fingerprint/anstyle-35c3016d96808058/: lib-anstyle  lib-anstyle.json
target_rustcrypto/release/.fingerprint/anstyle-6b49f2cc6274acaa/: lib-anstyle  lib-anstyle.json
target_rustcrypto/release/.fingerprint/anstyle-parse-c1e83e9d507d8c3a/: lib-anstyle_parse  lib-anstyle_parse.json
target_rustcrypto/release/.fingerprint/anstyle-parse-f12934562952823b/: lib-anstyle_parse  lib-anstyle_parse.json
target_rustcrypto/release/.fingerprint/anstyle-query-2c26e065b03fb153/: lib-anstyle_query  lib-anstyle_query.json
target_rustcrypto/release/.fingerprint/anstyle-query-adb602757be41d8d/: lib-anstyle_query  lib-anstyle_query.json
target_rustcrypto/release/.fingerprint/anyhow-3f7372bc3feec62d/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_rustcrypto/release/.fingerprint/anyhow-840ae3e7d674304a/: lib-anyhow  lib-anyhow.json
target_rustcrypto/release/.fingerprint/anyhow-b6206290eece0feb/: build-script-build-script-build  build-script-build-script-build.json
target_rustcrypto/release/.fingerprint/anyhow-b642449415129070/: build-script-build-script-build  build-script-build-script-build.json
target_rustcrypto/release/.fingerprint/anyhow-e6a1256d5bd7cef6/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_rustcrypto/release/.fingerprint/anyhow-f40489d62a0c4ae9/: lib-anyhow  lib-anyhow.json
target_rustcrypto/release/.fingerprint/base16ct-2c79f974e411530c/: lib-base16ct  lib-base16ct.json
target_rustcrypto/release/.fingerprint/base16ct-4344b18a0547184b/: lib-base16ct  lib-base16ct.json
target_rustcrypto/release/.fingerprint/base64-2189cc3bd3513b07/: lib-base64  lib-base64.json
tests/: e2e.rs  e2e_file_transfer.rs  gui_test.rs  input_pqc.txt  interop.rs  openssl_pqc.rs  output_pqc.enc  security.rs  threat_37_1_test.rs
tests/interop_data/pqc_enc/: input.txt  output.enc
tests/temp_hybrid_keys/: private_enc_hybrid_ecdh.key  public_enc_hybrid_ecdh.key
tests/temp_pqc_keys/: private_enc_pqc.key  public_enc_pqc.key
(+463 files in other folders)
