[package]
name = "nk-crypto-tool"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
openssl = { version = "0.10", optional = true }
openssl-sys = { version = "0.9", optional = true }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
fips203 = "0.4"
fips204 = "0.4"
sha3 = { version = "0.10", features = ["zeroize"] }
sha2 = "0.10"
hkdf = "0.12"
base64 = "0.21"
pkcs8 = { version = "0.10", features = ["encryption"] }
foreign-types = { version = "0.3", optional = true }
zeroize = { version = "1.0", features = ["derive"] }
rpassword = "7.2"
libc = "0.2"
tempfile = "3.8"
parking_lot = "0.12"
hex = "0.4"

# RustCrypto ecosystem
aes-gcm = { version = "0.10", optional = true }
p256 = { version = "0.13", features = ["ecdh", "ecdsa", "pem", "pkcs8"], optional = true }
ecdsa = { version = "0.16", optional = true }
signature = { version = "2.2", optional = true }
rand_core = { version = "0.6", features = ["getrandom"] }

# Low-level primitives for streaming GCM
aes = { version = "0.8", features = ["zeroize"], optional = true }
ctr = { version = "0.9", features = ["zeroize"], optional = true }
ghash = { version = "0.5", features = ["zeroize"], optional = true }
subtle = { version = "2.5", optional = true }
generic-array = { version = "0.14", optional = true }
chacha20poly1305 = "0.10.1"
chacha20 = { version = "0.9", features = ["zeroize"] }
poly1305 = { version = "0.8", features = ["zeroize"] }
once_cell = "1.21.4"

[features]
default = ["backend-openssl"]
backend-openssl = ["openssl", "openssl-sys", "foreign-types"]
backend-rustcrypto = [
    "aes-gcm",
    "p256",
    "ecdsa",
    "signature",
    "aes",
    "ctr",
    "ghash",
    "subtle",
    "generic-array",
]
